[metadata]
name = millipyde-jasbury1
version = 0.0.1
author = James Asbury
author_email = jasbury@calpoly.edu
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jasbury1/millipyde
project_urls =
    Bug Tracker = https://github.com/jasbury1/millipyde/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent